syntax = "proto3";
package proto;
option go_package = "./;proto";

import "session.proto";

service Keyboard {
    // register a hotkey and receive streamed messages when it is pressed
    rpc KeyboardHotkeyStream (KeyboardHotkeyStreamRequest) returns (stream KeyboardHotkeyStreamResponse);

    // stream chunks of text when the user finishes typing them
    rpc KeyboardTextStream (KeyboardTextStreamRequest) returns (stream KeyboardTextStreamResponse);

    // stream text as it is typed
    rpc KeyboardCharacterStream (KeyboardCharacterStreamRequest) returns (stream KeyboardCharacterStreamResponse);
}

message KeyboardHotkey {
    string key = 1;

    // bit 0  = altL
    // bit 1  = altR
    // bit 2  = alt
    // bit 3  = ctrlL
    // bit 4  = ctrlR
    // bit 5  = ctrl
    // bit 6  = metaL
    // bit 7  = metaR
    // bit 8  = meta
    // bit 9  = shiftL
    // bit 10 = shiftR
    // bit 11 = shift
    int32 modifiers = 2;
}

message KeyboardHotkeyStreamRequest {
    Session session = 1;
    KeyboardHotkey hotkey = 2;
}

message KeyboardHotkeyStreamResponse {
    bool scanned = 1;
    string error = 15;
}

message KeyboardTextStreamRequest {
    Session session = 1;
}

message KeyboardTextStreamResponse {
    string text = 1;
    string error = 15;
}

message KeyboardCharacterStreamRequest {
    Session session = 1;
}

message KeyboardCharacterStreamResponse {
    string text = 1;
    string error = 15;
}
